# Project-Balrog

./: README.md
apps/api/: .env  .env.example  .gitignore  README.md  dev.sh  main.py  pyproject.toml
apps/api/api.egg-info/: PKG-INFO  SOURCES.txt
apps/api/app/: agent.py  chat_store.py  clash_session.py  config.py  react_scratchpad.py  user_agent_config.py
apps/api/app/routes/: agent_config.py  chat.py  clashes.py
apps/api/app/tools/: __init__.py  playbook_tools.py
apps/api/app/utils/: __init__.py  agent_tool_log.py  clash_analysis_parse.py  clash_analysis_prompt.py  clash_inference.py  clash_parser.py  provider_errors.py
apps/api/experiments/: 20260407_XML_to_JSON.ipynb  20260414_Base_Model_Arch_vs_Structural_Clashes.xml  Base_Model_Arch_vs_Structural_Clashes_api_test.xml  XML_to_JSON.ipynb  XML_to_JSON_filtered1.ipynb  clash_resolution_playbook.html  clashes_with_severity.json
apps/api/skills/playbooks/Facade_x_Structure/: Curtain_Wall_x_Structural_Slab_Edge.md  Facade_Bracket_x_Structural_Beam_Web_Flange.md  README.md
apps/api/skills/playbooks/Interior_Design_x_Structural/: Built_in_Joinery_Millwork_x_Structural_Column.md  README.md  Raised_Access_Floor_x_Structural_Slab_Upstands.md
apps/api/skills/playbooks/MEP_x_Architecture/: MEP_Penetration_x_Fire_Rated_Compartment_Boundary.md  MEP_Services_Stack_x_Architectural_Ceiling_Void_Depth.md  README.md
apps/api/skills/playbooks/MEP_x_Facade/: HVAC_Duct_x_Facade_Louvre_Grille.md  MEP_Penetration_x_Facade_Panel_Curtain_Wall.md  README.md
apps/api/skills/playbooks/MEP_x_Interior_Design/: README.md  (+3 more)
(+92 files in other folders)
